dibsite/assets/css/style.css
* {
	padding: 0;
	margin: 0;
	box-sizing: border-box;
	font-family: 'poppins', sans-serif;
	scroll-behavior: smooth;
	list-style: none;
	text-decoration: none;
}
@font-face {
	font-family: "MV Boli", sans-serif;
	url: url("../fonts/mvboli.ttf") format("truetype");
}
:root {
	--main-color: #15B3D8;
	--main-color-hover: #17C6E2;
	--secondary-color: #F79321;
	--secondary-color-soft: #feeee7;
	--text-color: #000000;
	--bg-color: #ffffff;
	--bg-color2: #f3f5fa;
	--big-font: 5rem;
	--h2-font: 2.25rem;
	--p-font: 0.9rem;
	--card-font: 0.8rem;
	--label-font: 0.7rem;
	--font1: "MV Boli", sans-serif;
}
*::selection {
	background: var(--main-color);
	color: #000;
}
body {
	color: var(--text-color);
	background-color: var(--bg-color);
}
section {
	padding: 70px 5%;	
}
p {
	font-size: var(--p-font);
}
header {
	position: fixed;
	top: 0;
	right: 0;
	width: 100%;
	z-index: 1000;
	display: flex;
	align-items: center;
	justify-content: space-between;
	padding: 30px 170px;
	background: var(--bg-color);
}
header .logo {
	height: 30px;
}
.hide {
	opacity: 0;
	left: -100;
}
.show {
	opacity: 1;
	left: 0;
}
.disable {
	opacity: .5;
	cursor: not-allowed;
	pointer-events: none;
}

.logo {
	color: var(--main-color);
	font-weight: 600;
	font-size: 2.4rem;
}
.nav-container {
	display: flex;
	align-items: center;
	gap: 1rem;
}
.navbar {
	display: flex;
}
.navbar a {
	color: var(--text-color);
	font-size: 1.1rem;
	padding: 10px 20px;
	font-weight: 500;

}
.navbar a:hover {
	color: var(--main-color);
	transition: .4s;
}
.nav-container .langs {
	margin: auto 5px auto 0;
}
.nav-container .langs button {
	color: white;
	border: none;
	background-color: var(--main-color);
	padding: 5px 10px;
	transition: .5s;
}
.nav-container .langs button:hover {
	cursor: pointer;
	background-color: var(--main-color-hover);
}
.nav-container .langs button.active {
	background-color: var(--secondary-color);	
}
.nav-container a {
	display: flex;
	align-items: center;
}
.nav-container .logo_partner {
	width: 4rem;
}

#menu-icon {
	font-size: 2rem;
	cursor: pointer;
	display: none;
}

.hero {
	width: 100%;
	min-height: 90vh;
	display: grid;
	align-items: center;
	padding: 70px 0;
}
.hero-image {
	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/location2.jpeg");
	height: 100%;
	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;
	position: relative;
}
.hero-text {
	text-align: center;
	margin: 200px 0;
}
.hero-text h1{
	font-family: var(--font1);
	font-size: var(--big-font);
	color: white;
}
.hero-text h2{
	font-weight: 300;
	margin: 1rem 0 2rem;
	color: white;
}
.btn {
	display: inline-block;
	padding: 10px 20px;
	background: var(--main-color);
	color: #fff;
	border-radius: 0.5rem;
}
.btn:hover {
	background: var(--secondary-color);
	transition: .4s;
}
.about {
	display: grid;
	grid-template-columns: repeat(2, 2fr);
	grid-gap: 1.5rem;
	align-items: center;
	padding: 70px 10%;
	transition: all 1s;
}
.about-img img {
	max-width: 100%;
	width: 500px;
	height: auto;
}
.about-text span {
	color: var(--main-color);
	font-weight: 600;
}
.about-text h2 {
	font-size: var(--h2-font);
}
.about-text p {
	margin: 0.8rem 0 1.8rem;
}
.heading {
	text-align: center;
}
.heading span {
	color: var(--main-color);
	font-weight: 600;
}
.heading h2 {
	font-size: var(--h2-font);
}

.benefit {
	background: var(--bg-color2);
	transition: all 1s;
}

.benefit-container {
	margin-top: 4rem;
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
} 
.card {
	position: relative;
	margin: 0 1rem 2rem 0;
	padding: 20px;
	height: 350px;
	width: 250px;
	border-radius: 0.5rem;
	box-shadow: .3rem .3rem .5rem lightblue;
}
.benefit-container .card {
	color: white;
}
.benefit-container .card img {
	position: absolute;
	top: 0;
	left: 0;
	width: 250px;
	height: 350px;
	object-fit: cover;
	border-radius: 0.5rem;
}
.card .gradient-card {
	position: absolute;
	top: 0;
	left: 0;
	width: 250px;
	height: 350px;
	border-radius: 0.5rem;
	background: rgb(38,84,124);
	background: linear-gradient(0deg, rgba(38,84,124,1) 0%, rgba(38,84,124,1) 15%, rgba(38,84,124,0) 100%);

}
.card p {
	position: absolute;
	top: 60%;
	width: 215px;
	font-size: var(--card-font);
	line-height: 1.5;
}
.facility {
	transition: all 1s;
}
.facility-container {
	margin-top: 4rem;
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
}
.facility-container .card {
	background-color: var(--bg-color);
	border: 1px solid var(--main-color);
	text-align: center;
}
.facility-container .label {
	position: absolute;
	background: rgb(6,179,214);
	background: linear-gradient(90deg, rgba(6,179,214,1) 0%, rgba(246,146,32,1) 100%);
	color: white;
	top: 0;
	right: 0;
	padding: .3rem;
	font-size: var(--label-font);
	font-weight: 500;
	border-radius: 0 0.5rem 0 0.5rem ;
}
.facility-container img {
	width: auto;
	height: 75px;
	margin: 1rem 0;
}
.facility-container h3 {
	color: var(--main-color);
}
.facility-container p {
	position: static;
}
.services {
	background: var(--bg-color2);
	transition: all 1s;
}
.services-container {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	margin-top: 4rem;
}
.services-box {
	margin: 0 1rem 2rem 0;
	text-align: center;
	width: 250px;
	padding: 20px 30px;
}
.services-box img {
	width: 75px;
}
.services-box h3 {
	margin: 4px 0 10px;
	color: var(--main-color);
	font-size: 1.2rem;
}
.services-box p {
	line-height: 1.5;
	font-size: var(--card-font);
}
.partner,
.tenant {
	padding: 70px 0;
}
.partner h2,
.tenant h2 {
	font-size: var(--h2-font);
}
.tenant {
	background: var(--bg-color2);
	transition: all 1s;
}
.partner .logo_container,
.tenant .logo_container {
	display: flex;
	flex-wrap: wrap;
	align-items: center;
	justify-content: center;
	margin-top: 2rem;
	width: 100%;
}
.partner .logo_item,
.tenant .logo_item {
	margin-left: 1rem;
	padding: 1rem;
	display: flex;
	flex-direction: column;
}
.partner .logo_item img,
.tenant .logo_item img {
	height: 5rem;
	margin-inline: 2rem;
	filter: gray; /* IE6-9 */
  	-webkit-filter: grayscale(1); /* Google Chrome, Safari 6+ & Opera 15+ */
  	filter: grayscale(1); /* Microsoft Edge and Firefox 35+ */
	transition: .3s ease;
}
.partner .logo_item img.logo-lebar,
.tenant .logo_item img.logo-lebar {
	width: 7rem;
	height: 7rem;
}
.partner .logo_item img:hover,
.tenant .logo_item img:hover {
	-webkit-filter: grayscale(0);
	filter: none;
	transform: scale(1.1);
	transition: .4s;
}
.partner .logo_item p,
.tenant .logo_item p {
	text-align: center;
	font-size: 12px;
}
.cta {
	background: var(--main-color);
	padding: 70px 17%;
	text-align: center;
	width: 100%;
	transition: all 1s;
}
.cta p {
	color: white;
	margin: 0 0 20px 0;
}
.cta h2 {
	font-family: var(--font1);
	font-size: 2rem;
	color: white;
	margin-bottom: 30px;
}
.cta .btn {
	display: inline-block;
	padding: 10px 20px;
	background: var(--secondary-color);
	color: #fff;
	border-radius: 0.5rem;
}
.cta .btn:hover {
	transform: scale(1.2);
	transition: .4s;
}
.footer {
	padding: 70px 17%;
	transition: all 1s;
}
.footer-container {
	padding: 10px 0;
}
.main {
	display: flex;
	flex-wrap: wrap;
}
.col {
	width: 25%;
}
.col h4 {
	font-size: 1.2rem;
	color: var(--text-color);
	margin-bottom: 25px;
	position: relative;
}
.col h4::before {
	content: "";
	position: absolute;
	height: 2px;
	width: 50px;
	left: 0;
	bottom: -8px;
	background: var(--main-color);
}
.col ul li:not(last-child) {
	margin-bottom: 15px;
}
.col ul li a {
	color: #9897a9;
	font-size: 1.1rem;
	display: block;
	text-transform: capitalize;
	transition: .4s;
}
.col ul li a:hover {
	color: var(--text-color);
	transform: translateX(-12px);
}
.col:last-child {
	width: 50%;
}
.col .kontak {
	display: flex;
}
.col .kontak .kontak-col{
	margin: 0 20px 0 0;
}
.col .social {
	width: 220px;
	display: flex;
	align-items: center;
	justify-content: space-between;
}
.col .social a {
	height: 40px;
	width: 40px;
	background: var(--main-color);
	color: white;
	display: inline-flex;
	align-items: center;
	justify-content: center;
	font-size: 1.5rem;
	border-radius: 50%;
	transition: .4s;
}
.col .social a:hover {
	transform: scale(1.2);
	color: var(--text-color);
	background: var(--bg-color);
}
.footer p {
	margin-bottom: 15px;
}


.calender {
	display: grid;
	grid-template-columns: repeat(2);
	grid-gap: 1.5rem;
	align-items: center;
	padding: 70px 10%;
	margin: 70px 0;
	transition: all 1s;
}
.calender .calender-wrapper {
	display: grid;
	grid-template-columns: repeat(2, 2fr);
}
.calender .calender-table-header {
	display: grid;
	grid-template-columns: 100px 100px 100px 100px 100px 100px 100px;
	padding: 10px;
}
.calender .calender-table-header .table-col {
	display: flex;
	align-items: center;
	justify-content: center;
	border: 1px solid lightgrey;
}
.calender .calender-table-body {
	display: grid;
	grid-template-columns: 100px 100px 100px 100px 100px 100px 100px;
	padding: 10px;
}
.calender .calender-table-body .table-col {
	display: flex;
	align-items: center;
	justify-content: center;
	border: 1px solid lightgrey;
	padding: 20px;
}
.calender .table-col.disabled {
	color: grey;
	background-color: lightgrey;
}

@media (max-width: 1560px) {
	header {
		padding: 15px 40px;
	}
	:root {
		--big-font: 3.5rem;
		--h2-font:2rem;

	}
}
@media (max-width: 1140px) {
	section {
		padding: 50px 8%;
	}
	#menu-icon {
		display: initial;
		color: var(--text-color);
	}
	header .navbar {
		position: absolute;
		top: -400px;
		left: 0;
		right: 0;
		display: flex;
		flex-direction: column;
		text-align: center;
		background: #ffffff;
		transition: .3s;
	}
	header .navbar.active {
		top: 70px;
	}
	.navbar a {
		padding: 1.5rem;
		display: block;
	}
	.col {
		width: 50%;
		margin-bottom: 10px;
	}
	.col:last-child {
		width: 100%;
	}
	.col .kontak {
		display: block;
	}
	.col .kontak .kontak-col{
		margin: 0 0 10px 0;
	}
}
@media (max-width: 720px) {
	header {
		padding: 10px 16px;
	}
	.benefit {
		grid-template-columns: 1fr;
		text-align: center;
	}
	.about {
		grid-template-columns: 1fr;
		text-align: center;	
	}
	.about-img {
		order: 2;
	}
	section {
		padding: 100px 7%;
	}
}
@media (max-width: 671px) {
	.col {
		width: 100%;
	}
	.tenant .logo_item {
		margin-left: .5rem;
		padding: .5rem;
	}
	.tenant .logo_item img {
		margin-inline: 1rem;
	}
}
@media (max-width: 575px) {
	.col {
		width: 100%;
	}
	.tenant .logo_item {
		margin-left: .5rem;
		padding: .5rem;
	}
	.tenant .logo_item img {
		margin-inline: 1rem;
	}
}
@media (max-width: 407px) {
	.tenant .logo_item {
		margin-left: .5rem;
		padding: .5rem;
	}
	.tenant .logo_item img {
		height: 4rem;
		margin-inline: 1rem;
	}
}

